# opengl-test

./: .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: main.cpp
